# rfp-ofsaa

./: .env.example  .gitignore  README.md  chat_with_doc_backend.py  excelbot_backend.py  fsd_generator_backend.py  main.py  package-lock.json  package.json  pyproject.toml  run_all_tests.py  start.bat  start.ps1  start.sh  test_generator.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/design-system/: page.tsx
frontend/src/app/federico-rosa/: page.tsx
frontend/src/app/fontshare/: page.tsx
frontend/src/components/: DocumentDisplay.tsx  MarkdownCanvas.tsx  MarkdownRenderer.tsx  TextSelectionToolbar.tsx  ThemeToggle.tsx  TypingIndicator.tsx
frontend/src/components/modals/: ClearConfirmModal.tsx  HelpModal.tsx  UploadConfirmModal.tsx
frontend/src/constants/: theme.ts
frontend/src/hooks/: useHistory.ts
frontend/src/utils/: markdownExtractor.ts
services/: ai_service.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: DocumentPreviewer.tsx
src/components/markdown/: editor.tsx  left-sidebar.tsx  main-editor.tsx  right-sidebar.tsx
tests/: test_ai_service.py  test_chat_with_doc_backend.py  test_excelbot_backend.py  test_fsd_generator_backend.py  test_main.py  test_run_all_tests.py
